# tba-rs

./: Cargo.toml
src/: error.rs  lib.rs
src/ctx/: endpoints.rs  mod.rs
src/model/: event.rs  id.rs  matches.rs  mod.rs  team.rs
