[package]
name = "tba"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
url = { version = "2.2", features = ["serde"] }
moka = "0.9"
once_cell = "1.1"
thiserror = "1.0"
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.2", features = ["full", "macros"] }
